# monkeybar

./: .gitignore  .vimrc  CMakeLists.txt  README.md  TODO  config.h.in
doc/: Doxyfile
include/: config.h.in  loldog.h
lib/component/: CMakeLists.txt  component.cmake  component.h
lib/component/include/: component.h  component_s.h
lib/component/src/: component.c
lib/dictionary/: CMakeLists.txt  dictionary.cmake  dictionary.h
lib/dictionary/include/: dictionary.h
lib/dictionary/src/: dictionary.c
lib/event/: CMakeLists.txt  event.cmake  event.h
lib/event/include/: event.h  event_callback.h  event_s.h  event_target.h  event_target_s.h
lib/event/src/: event.c  event_callback.c  event_target.c
lib/trie/: CMakeLists.txt  README.rst  check_trie.c  trie.c  trie.cmake  trie.h
lib/trie/include/: trie.h
lib/trie/src/: trie.c
lib/trie/test/: check_trie.c
lib/vector/: CMakeLists.txt  vector.cmake  vector.h
lib/vector/include/: vector.h  vector_iterator.h  vector_node_s.h  vector_s.h
lib/vector/src/: vector.c  vector_iterator.c
lib/vector/test/: check_vector.c  check_vector_iterator.c
lib/window/: window.h
monkeybar/: CMakeLists.txt  monkeybar.cmake
monkeybar/include/: config.h.in  loldog.h
monkeybar/src/: main.c
src/: main.c
test/: CMakeLists.txt  test.cmake  trie.c  vector.c  vector_iterator.c
